packages/errors/test/__snapshots__/CDP_VERSION_TOO_OLD.ansi
[31mA minimum CDP version of [33m1.3[39m[31m is required, but the current browser has [33m1.2[39m[31m.[39m